--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
+        "jquery": "^3.6.0",
         "jquery-ui": "^1.13.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "material-icons": "^1.10.6",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
-    },
-    "dependencies": {
-        "jquery": "^3.6.0"
     }
 }
