--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
+        "datatables.net-bs5": "^1.11.4",
         "jquery": "^3.6.0",
         "jquery-ui": "^1.13.1",
         "laravel-mix": "^6.0.6",
@@ -21,6 +22,7 @@
         "postcss": "^8.1.14",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "sweetalert2": "^11.4.0"
     }
 }
