--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
+        "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^5.0",
         "yajra/laravel-datatables": "1.5",
         "yajra/laravel-datatables-oracle": "^9.19"
