--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
+        "datatables.net": "^1.11.5",
+        "datatables.net-bs4": "^1.11.5",
         "datatables.net-bs5": "^1.11.4",
         "jquery": "^3.6.0",
         "jquery-ui": "^1.13.1",
